<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="14dp"
            android:fontFamily="@font/satisfy_regular"
            android:text="@string/logo"
            android:textColor="#313131"
            android:textSize="40sp"
            app:layout_constraintBottom_toTopOf="@id/imgHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/header"
            app:layout_constraintBottom_toTopOf="@id/gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoText" />

        <TextView
            android:id="@+id/introText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/intro_text"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@id/introButton"
            app:layout_constraintEnd_toEndOf="@id/imgHeader"
            app:layout_constraintStart_toStartOf="@id/imgHeader"
            app:layout_constraintTop_toTopOf="@id/imgHeader" />

        <TextView
            android:id="@+id/introButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="@string/header_button_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/imgHeader"
            app:layout_constraintEnd_toEndOf="@id/imgHeader"
            app:layout_constraintStart_toStartOf="@id/imgHeader"
            app:layout_constraintTop_toBottomOf="@id/introText" />

        <TextView
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/gallery_title"
            android:textColor="#313131"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/image_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="335dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/image_list2"
            app:layout_constraintEnd_toEndOf="@id/gallery"
            app:layout_constraintHorizontal_bias="0.201"
            app:layout_constraintStart_toStartOf="@id/gallery"
            app:layout_constraintTop_toBottomOf="@id/gallery"
            tools:listitem="@layout/image_item" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_list2"
            android:layout_width="match_parent"
            android:layout_height="334dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/textView_events"
            app:layout_constraintEnd_toEndOf="@id/image_list"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/image_list"
            app:layout_constraintTop_toBottomOf="@id/image_list"
            tools:listitem="@layout/image_item2" />

        <TextView
            android:id="@+id/textView_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/textView_events"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/viewPagerEvents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_list2" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerEvents"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:paddingHorizontal="60dp"
            app:layout_constraintBottom_toTopOf="@id/textView_eventsEstablishment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_events"
            tools:listitem="@layout/image_holder" />

        <TextView
            android:id="@+id/textView_eventsEstablishment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/event_establishment"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPagerEvents" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager_EventsEstablishment"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="60dp"
            app:layout_constraintBottom_toTopOf="@id/textView_Services"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_eventsEstablishment" />

        <TextView
            android:id="@+id/textView_Services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/services"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPager_EventsEstablishment" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvServices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/textView_Services"
            app:layout_constraintStart_toStartOf="@id/textView_Services"
            app:layout_constraintTop_toBottomOf="@id/textView_Services"
            tools:listitem="@layout/service_item" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkOut_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/checkout_button_style"
            android:text="@string/checkOut_button_text"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:onClick="showStatementDialogWindow"
            app:layout_constraintBottom_toTopOf="@id/footer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvServices" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F2F2F2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkOut_button">

            <TextView
                android:id="@+id/footer_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/satisfy_regular"
                android:text="@string/footer_logo"
                android:textColor="#313131"
                android:textSize="50sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/instagram"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="96dp"
                app:layout_constraintTop_toBottomOf="@id/footer_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/telegram"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/telegram"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/telegram"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintTop_toBottomOf="@id/footer_logo"
                app:layout_constraintLeft_toRightOf="@id/instagram"
                app:layout_constraintRight_toLeftOf="@id/facebook"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="96dp"
                app:layout_constraintTop_toBottomOf="@id/footer_logo"
                app:layout_constraintLeft_toRightOf="@id/telegram"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>